@@ -1,24 +1,15 @@
 {
-  "timestamp" : "2024-08-15T00:56:52Z",
-  "count_outdated" : 220163,
-  "uniques_outdated" : 2180,
-  "count" : 221963,
-  "uniques" : 2194,
+  "timestamp" : "2024-08-16T00:58:49Z",
+  "count_outdated" : 220291,
+  "uniques_outdated" : 2181,
+  "count" : 222092,
+  "uniques" : 2195,
   "clones" : [
     {
-      "timestamp": "2024-08-01T00:00:00Z",
-      "count": 98,
-      "count_minmax": [ 98, 128 ],
-      "count_decinc": [ 30, 128 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
-    {
       "timestamp": "2024-08-02T00:00:00Z",
-      "count": 129,
-      "count_minmax": [ 129, 129 ],
-      "count_decinc": [ 0, 129 ],
+      "count": 92,
+      "count_minmax": [ 92, 129 ],
+      "count_decinc": [ 37, 129 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
@@ -127,6 +118,15 @@
       "count": 128,
       "count_minmax": [ 128, 128 ],
       "count_decinc": [ 0, 128 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-08-15T00:00:00Z",
+      "count": 129,
+      "count_minmax": [ 129, 129 ],
+      "count_decinc": [ 0, 129 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
