@@ -1,15 +1,10 @@
 {
-  "count": 1770,
+  "count": 1764,
   "uniques": 1,
   "clones": [
     {
-      "timestamp": "2024-08-01T00:00:00Z",
-      "count": 98,
-      "uniques": 1
-    },
-    {
       "timestamp": "2024-08-02T00:00:00Z",
-      "count": 129,
+      "count": 92,
       "uniques": 1
     },
     {
@@ -70,6 +65,11 @@
     {
       "timestamp": "2024-08-14T00:00:00Z",
       "count": 128,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2024-08-15T00:00:00Z",
+      "count": 129,
       "uniques": 1
     }
   ]
