@@ -1,3 +1,12 @@
+2024-08-16T00:58:49Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10412850380 # 389
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-08-16
+* notice: last 14d: unq all: 1 1764
+* notice: prev accum: outdated-unq outdated-all / unq all: 2180 220163 / 2194 221963
+* notice: next accum: outdated-unq outdated-all / unq all: 2181 220291 / 2195 222092
+* notice: prev exec diff / last date diff / accum: unq all: +1 +129 -0 -37 / +1 +129 -0 -0 / 1 129
+* notice: removed / changed dates: [2024-08-01] / [2024-08-02 2024-08-15]
+
 2024-08-15T00:56:52Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10396971605 # 388
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-08-15
